--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "glob": "^11.0.0",
+    "mongoose": "^8.8.3",
     "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1"
   }
 }
