--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "dependencies": {
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose-sequence": "^6.0.1",
+    "multer": "^1.4.5-lts.1"
+  },
   "devDependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -16,20 +24,6 @@
     "mongoose": "^8.8.3",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "axios": "^1.7.9",
-    "body-parser": "^1.20.3",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mongoose-sequence": "^6.0.1",
-    "multer": "^1.4.5-lts.1"
-  },
-  "dependencies": {
-    "axios": "^1.7.9",
-    "body-parser": "^1.20.3",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mongoose-sequence": "^6.0.1",
-    "multer": "^1.4.5-lts.1"
+    "passport-jwt": "^4.0.1"
   }
 }
