add facility and Jobpost page

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=5000
 API_PREFIX=/api/v1
-MONGO_URI=mongodb://localhost:27017/JobJob
+# MONGO_URI=mongodb+srv://aaa:aaa@cluster0.r4cq6.mongodb.net
+MONGO_URI=mongodb://127.0.0.1:27017/JobJob
 SECRET=secret
 
