--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ API_PREFIX=/api/v1
 # MONGO_URI=mongodb+srv://aaa:aaa@cluster0.r4cq6.mongodb.net
 MONGO_URI=mongodb://127.0.0.1:27017/JobJob
 SECRET=secret
+FRONTEND_URL=localhost:3000
 
