--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
     "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.1",
-    "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "bcrypt": "^5.1.1"
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7",
-    "glob": "^11.0.0"
+    "glob": "^11.0.0",
+    "nodemon": "^3.1.7"
   }
 }
-
