--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-PORT=5000
-API_PREFIX=/api/v1
-MONGO_URI=mongodb://localhost:27017/JobJob
-SECRET=secret
+PORT=
+API_PREFIX=
+MONGO_URI=
+SECRET=
 SENDGRID_API_KEY=
 
